[package]
name = "propagation-notebook"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
jiff = { version = "0.2.24", features = ["serde"] }
toasty = { version = "0.5.0", features = ["jiff", "sqlite", "serde"] }
toasty-cli = "0.5.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = { version = "2.5.8", features = ["serde"] }
