[package]
name = "propagation-notebook"
version = "0.1.0"
edition = "2024"
default-run = "pn"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
jiff = { version = "0.2.24", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
strum = { version = "0.28.0", features = ["derive"] }
toasty = { version = "0.6.1", features = ["jiff", "sqlite", "serde"] }
toasty-cli = "0.6.1"
tokio = { version = "1.52.1", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
divan = "0.1.21"


[[bench]]
name = "region-taxa"
harness = false
